# DICOMeter

./: CMakeLists.txt  Makefile  README.md  build.py
DICOMeter/: CMakeLists.txt  DicomLoader.cpp  DicomLoader.h  main.cpp
sample-dicom-files/: invalid-dicom-file.dcm
